HTML CSS Responsive template complete
This theme is done. Of-course we can make it even better but technically
it's done for now.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
 </head>
 <body>
 	<div class="container-fluid background1 text-center">
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+				<!-- Start of collapsible menu -->
+				<button type="button" class="navbar-toggle" data-target="#topNavBar" data-toggle="collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<!-- End of collapsible menu -->
+					<div class="navbar-brand" href="#">
+						LOGO
+					</div>
+				</div>
+				<div class="collapse navbar-collapse" id="topNavBar">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Products</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Testimonials</a></li>
+						<li><a href="#">Contact Us</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 		<h3>What is Lorem Ipsum?</h3>
 		<img src="images/bird.jpg" class="img-circle img-responsive inline" alt="bird silchar" width="350" height="350"/>
 		<h4>Or an e-Store?</h4>
@@ -24,31 +49,36 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<h4>Services</h4>
-				<img src="images/birds1.jpg" alt="services" class="img img-rounded img-responsive" />
+				<img src="images/birds1.jpg" alt="services" class="img img-rounded img-responsive thumbnail-image-padding" />
 				<p>
 					It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
 				</p>
 			</div>
 			<div class="col-sm-4">
 				<h4>Technologies</h4>
-				<img src="images/birds2.jpg" alt="technolgies" class="img img-rounded img-responsive" />
+				<img src="images/birds2.jpg" alt="technolgies" class="img img-rounded img-responsive thumbnail-image-padding" />
 				<p>
 					It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
 				</p>
 			</div>
-			<div class ="col-sm-4">
+			<div class ="col-sm-4 ">
 				<h4>Portfolio</h4>
-				<img src="images/birds3.jpg" alt="portfolio" class="img img-rounded img-responsive" />
+				<img src="images/birds3.jpg" alt="portfolio" class="img img-rounded img-responsive thumbnail-image-padding" />
 				<p>
 					It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
 				</p>
 			</div>
 		</div>
-		<h3>Contact Me</h3>
-		<p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-		<a href="#" class="btn btn-default btn-lg">
-			<span class="glyphicon glyphicon-search"></span>Click Me!
-		</a>
+		<div class="col-sm-12 background4">
+			<h3>Contact Me</h3>
+			<p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+			<a href="#" class="btn btn-default btn-lg">
+				<span class="glyphicon glyphicon-search"></span>Click Me!
+			</a>
+		</div>
 	</div>
+	<footer class="container-fluid text-center footer-bg">
+		&copy; Silchar Theme by <a href="http://www.rajivverma.me" target="_blank">Rajiv Verma</a> | Will be based on WordPress
+	</footer>
 </body>
 </html>
